# notification

./: .gitignore  instructions.txt  package.json  serverless.yml  testNotification.http  windows-dynamo-gui.bat
.serverless/: cloudformation-template-update-stack.json  requirements.txt  serverless-state.json
app/layers/common/: constants.py
bazar-contactus/: Cargo.toml
bazar-contactus/src/: main.rs
bazar-subscribe-updates/: Cargo.toml
bazar-subscribe-updates/src/: main.rs
notification/: .coverage  README.md  commands.txt  localDev.sh  package-lock.json  requirements.txt  seed.json
notification/app/: index.py
notification/app/lambdas/sms/create/: index_service.py  notification_helper.py
notification/app/layers/common/: api_responses.py  dynamo_client.py  utils.py
notification/app/layers/entities/notification/: general_notification.py
notification/test/app/: test_index.py
notification/test/app/layers/common/: test_api_responses.py
test/app/lambdas/sms/create/: test_index_service.py
test/app/layers/entities/notification/: test_general_notification.py
