[package]
name = "bazar-contactus"
version = "0.1.0"
edition = "2021"
author = ["Diego Cortes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.78"
log = "0.4.14"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lambda_http = "0.7"
aws-config = "0.51.0"
aws-sdk-dynamodb = "0.21.0"
http = "0.2.8"